--- a/_layouts/default.it.html
+++ b/_layouts/default.it.html
@@ -124,187 +124,7 @@ google_color_text = "FFFFFF";
   src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
 
-<br/><br/>
-
-	<p>
-
-		Turtle Firewall &egrave; un software che permette di realizzare un firewall Linux
-		in modo semplice e rapido.<br/>
-		Si basa sul kernel 2.4.x/2.6.x e iptables.
-		La logica di funzionamento di Turtle Firewall &egrave; semplice: si definiscono
-		gli elementi del firewall (zone, hosts, reti) e poi si definiscono i servizi che
-		si desidera abilitare tra i diversi elementi o gruppi di elementi.<br/>
-		Tutto questo si pu&ograve; fare attraverso una
-		comoda interfaccia web integrata in <a href="http://www.webmin.com">Webmin</a>.
-
-
-	</p>
-	<p>
-
-		Turtle Firewall &egrave; un progetto Open Source
-		scritto in linguaggio <a href="http://www.perl.com">perl</a>
-		e rilasciato sotto licenza GPL 2.0 da Andrea Frigido (Frisoft).
-
-
-	</p>
-	<p>
-		<b>Autore:</b>
-		Andrea Frigido &lt;andrea at frisoft.it&gt;
-		<a href="andrea-at-frisoft-dot-it-key.txt">PGP key</a>
-		<br/>
-	</p>
-
-	<p>
-		<big><b>News</b>:</big><br/>
-	</p>
-	<ul>
-		<li>
-<i>2011-05-20</i><br/>
-Nuovo Turtle Firewall 1.38
-
-</li>
-
-<li>
-<i>2006-02-02</i><br/>
-Nuovo Turtle Firewall 1.37 (richiede iptables >= 1.2.11)
-
-</li>
-
-<li>
-<i>2006-01-11</i><br/>
-Nuovo Turtle Firewall 1.36 (richiede iptables >= 1.2.11)
-
-</li>
-
-<li>
-<i>2005-10-31</i><br/>
-Nuovo Turtle Firewall 1.34 (aggiunta opzione per marcare i pacchetti, richiede iptables >= 1.2.11)
-
-</li>
-
-<li>
-<i>2005-09-09</i><br/>
-Nuovo Turtle Firewall 1.33 (richiede iptables >= 1.2.11)
-
-</li>
-
-<li>
-<i>2003-05-14</i><br/>
-Nuovo Turtle Firewall 1.27
-
-</li>
-
-<li>
-<i>2003-04-14</i><br/>
-Nuovo Turtle Firewall 1.25
-
-</li>
-
-<li>
-<i>2003-02-18</i><br/>
-Nuovo Turtle Firewall 1.23
-
-</li>
-
-<li>
-<i>2003-02-12</i><br/>
-Nuovo Turtle Firewall 1.22
-
-</li>
-
-<li>
-<i>2003-01-16</i><br/>
-Nuovo Turle Firewall 1.21
-
-</li>
-
-<li>
-<i>2003-01-15</i><br/>
-Nuovo Turle Firewall 1.20
-
-</li>
-
-<li>
-<i>2002-12-13</i><br/>
-Nuovo sito del progetto Turtle Firewall.
-
-</li>
-
-<li>
-<i>2002-11-25</i><br/>
-Nuovo Turle Firewall 1.19
-
-</li>
-
-
-	</ul>
-
-	<p>
-		<big><b>Funzionalit&agrave;</b>:</big><br/>
-	</p>
-	<ul>
-		<li>
-			Definizione di ZONE, RETI, HOST e GRUPPI.
-
-		</li>
-		<li>
-			Definizione di regole di filtro basate sui servizi.
-
-		</li>
-		<li>
-			Definizione di nuovi servizi.
-
-		</li>
-		<li>NAT</li>
-		<li>Masquerading</li>
-	</ul>
-	<p>
-		<big><b>Requisiti</b>:</big><br/>
-	</p>
-	<ul>
-		<li>
-			Interprete perl.
-
-		</li>
-		<li>
-			libreria expat (normalmente presente in tutte le distro).
-
-		</li>
-		<li>
-			modulo perl XML::Parser.
-
-		</li>
-		<li><a href="http://www.webmin.com">Webmin</a> (per usare l'interfaccia web).</li>
-		<li>
-			comando iptables in PATH.
-
-		</li>
-		<li>
-			Netfilter kernel modules installati o compilati dentro il kernel (ip_tables, ip_conntrack, ecc.).
-
-		</li>
-		<li>
-			Forward abilitato ("Act as router"=yes nel form Hardware->Network->Routing di webmin).
-
-		</li>
-	</ul>
-	<p>
-		<big><b>Risorse</b>:</big><br/>
-	</p>
-	<ul>
-		<li><a href="http://netfilter.samba.org">Linux NetFilter</a></li>
-	</ul>
-
-	<p>
-		<big><b>Mirrors di questo sito</b>:</big><br/>
-	</p>
-	<ul>
-		<li><a href="http://www.turtlefirewall.com">www.turtlefirewall.com</a> (Sito Ufficiale)</li>
-		<li><a href="http://turtlefirewall.sourceforge.net">turtlefirewall.sourceforge.net</a></li>
-	</ul>
-
-	<br/>
-
+{{ content }}
 
     <br/>
     <p align="center">
