--- a/_layouts/default.it.html
+++ b/_layouts/default.it.html
@@ -12,12 +12,6 @@
                  table {font-family: "Helvetica";}
     </style>-->
     <link rel="stylesheet" href="style.css" type="text/css"/>
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
-<script type="text/javascript">
-_uacct = "UA-159124-3";
-urchinTracker();
-</script>
   </head>
   <body>
 	<table border="0" width="100%" cellpadding="0" cellspacing="0">
@@ -108,21 +102,7 @@ urchinTracker();
 			<h1>Turtle Firewall Project</h1>
 			<br/>
 
-<script type="text/javascript"><!--
-google_ad_client = "pub-7612088018248760";
-google_ad_width = 468;
-google_ad_height = 15;
-google_ad_format = "468x15_0ads_al";
-google_ad_channel ="";
-google_color_border = "2E4EED";
-google_color_bg = "2E4EED";
-google_color_link = "FFFFFF";
-google_color_url = "FFFFFF";
-google_color_text = "FFFFFF";
-//--></script>
-<script type="text/javascript"
-  src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
+{% include ads-top.html %}
 
 {{ content }}
 
@@ -136,22 +116,9 @@ google_color_text = "FFFFFF";
 
 	<td valign="top" width="120">
 	<br><br><br><br><br><br>
-<script type="text/javascript"><!--
-google_ad_client = "pub-7612088018248760";
-google_ad_width = 120;
-google_ad_height = 600;
-google_ad_format = "120x600_as";
-google_ad_type = "text";
-google_ad_channel ="";
-google_color_border = "2E4EED";
-google_color_bg = "2E4EED";
-google_color_link = "FFFFFF";
-google_color_url = "FFFFFF";
-google_color_text = "FFFFFF";
-//--></script>
-<script type="text/javascript"
-  src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
+
+  {% include ads-bottom.html %}
+
 	</td>
 
 
@@ -175,5 +142,6 @@ google_color_text = "FFFFFF";
 
 	</td></tr></table>
 
+    {% include js.html %}
   </body>
 </html>
